# fwkbd

./: Cargo.toml  DEV_NOTES.md  README.md  prototype.sh
src/: cli.rs  libinput.rs  main.rs  uleds.rs
