[package]
name = "fwkbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
input = "0.9.0"
keyframe = { version = "1.1.1", default-features = false }
libc = "0.2.153"
rustix = "0.38.32"
tokio = { version = "1", features = ["full"] }
x11rb = { version = "0.13.0", features = ["screensaver"] }


[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
lto = true
