[package]
name = "fwkbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
input = "0.9.0"
keyframe = { version = "1.1.1", default-features = false }
libc = "0.2.153"
rustix = { version = "0.38.32", features = ["event"] }
tokio = { version = "1", features = ["full"] }


[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
lto = true
