[package]
name = "fwkbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4", features = ["derive", "color", "help", "usage", "error-context", "std"], default-features = false }
env_logger = "0.11.3"
input = "0.9.0"
keyframe = { version = "1.1.1", default-features = false }
libc = "0.2.153"
log = { version = "0.4", features = ["std", "max_level_trace", "release_max_level_warn"] }
rustix = { version = "0.38.32", features = ["event"] }
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "signal", "process", "io-util", "sync", "macros", "time"] }
framework_lib = { git = "https://github.com/FrameworkComputer/framework-system", rev="b03685b932cea0e8492592c138b8d20b5c0ac7c5" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
lto = true
